bugfix out of boundary footer update steps view

--- a/resources/js/styles/index.scss
+++ b/resources/js/styles/index.scss
@@ -54,7 +54,7 @@ a,
 a:focus,
 a:hover {
   cursor: pointer;
-  color: inherit;
+  /*color: inherit;*/
   text-decoration: none;
 }
 
